[package]
name = "ifeq"
version = "0.1.0"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
description = "Inline if then as generics"
license = "MIT"
homepage = "https://github.com/mezeipetister/ifeq"
repository = "https://github.com/mezeipetister/ifeq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
