[package]
name = "ifeq"
version = "0.1.3"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
description = "Inline if then as generics"
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/mezeipetister/ifeq"
repository = "https://github.com/mezeipetister/ifeq"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
